k8s/base/netbox/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbox
  labels:
    app: netbox
    component: application
spec:
  replicas: 2
  selector:
    matchLabels:
      app: netbox
      component: application
  template:
    metadata:
      labels:
        app: netbox
        component: application
    spec:
      containers:
      - name: netbox
        image: netboxcommunity/netbox:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        volumeMounts:
        - name: media
          mountPath: /opt/netbox/netbox/media
        resources:
          requests:
            memory: "512Mi"
            cpu: "200m"
          limits:
            memory: "2Gi"
            cpu: "2000m"
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: netbox-media-pvc
