k8s/base/netbox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbox
  labels:
    app: netbox
    component: application
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: netbox
    component: application
